Update dependencies, enhance Sentry configuration, and refactor type definitions. Added environment variables for Sentry uploads, updated React Native and related packages, and improved type safety in API calls. Removed unused seed file.

--- a/app.json
+++ b/app.json
@@ -45,7 +45,9 @@
         {
           "url": "https://sentry.io/",
           "project": "react-native-fast-food",
-          "organization": "next-js-3c"
+          "organization": "next-js-3c",
+          "uploadNativeSymbols": false,
+          "uploadSourceMaps": false
         }
       ]
     ],
