--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
-    "@sentry/react-native": "^6.22.0",
+    "@sentry/react-native": "~7.2.0",
     "clsx": "^2.1.1",
     "expo": "~54.0.11",
     "expo-constants": "~18.0.9",
@@ -32,24 +32,27 @@
     "nativewind": "^4.2.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-native": "0.81.4",
+    "react-native": "0.81.5",
     "react-native-appwrite": "^0.15.0",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-reanimated": "~3.17.5",
+    "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.1",
     "react-native-screens": "~4.16.0",
     "react-native-url-polyfill": "^3.0.0",
     "react-native-web": "~0.21.0",
-    "react-native-worklets": "0.5.1"
+    "react-native-worklets": "0.5.1",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
-    "eas-cli": "^16.27.0",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss": "^3.4.18",
     "typescript": "~5.9.2"
+  },
+  "overrides": {
+    "expo-file-system": "~19.0.0"
   },
   "private": true
 }
